# Ring-It

./: .gitignore  README .md
backend/: .env.example  001email_verification.py  alembic.ini  gen_key.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 09afe08f1b2d_initial_schema.py  6922ddc504d0_add_password_reset_tokens.py  730a6951858c_add_division_store_to_transactions2.py  81027efc7990_add_subcategory_to_transactions.py  868fd0016221_add_email_verification_tokens.py  c8462f44227b_add_password_reset_tokens.py  c945288e6495_add_email_hmac.py  d18eb8d29259_add_division_store_to_transactions.py  d906c60f1680_add_password_reset_tokens.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  accounts.py  auth.py  ledger.py  transactions.py
backend/app/core/: config.py  database.py  deps.py  email.py  encryption.py  rate_limit.py  security.py
backend/app/models/: __init__.py  account.py  base.py  budget.py  debt.py  email_verification.py  goal.py  ledger_entry.py  password_reset.py  policy_config.py  tax_record.py  transaction.py  user.py
backend/app/repositories/: account_repo.py  ledger_repo.py  transaction_repo.py  user_repository.py
backend/app/schemas/: __init__.py  accounts.py  auth.py  ledger.py  transaction.py
backend/app/services/: account_services.py  auth_services.py  cloudinary_service.py  import_service.py  ledger_service.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.mts
frontend/src/: main.ts
(+38 files in other folders)
